--- a/docs/package.json
+++ b/docs/package.json
@@ -15,17 +15,18 @@
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
     "@types/culori": "^2.0.0",
-    "astro": "^3.2.3",
+    "astro": "^4.0.1",
     "culori": "^3.2.0",
     "sharp": "^0.32.5"
   },
   "devDependencies": {
-    "hast-util-from-html": "^1.0.2",
-    "hast-util-to-string": "^2.0.0",
-    "hastscript": "^7.2.0",
+    "@types/hast": "^3.0.3",
+    "hast-util-from-html": "^2.0.1",
+    "hast-util-to-string": "^3.0.0",
+    "hastscript": "^8.0.0",
     "pa11y-ci": "^3.0.1",
-    "rehype": "^12.0.1",
+    "rehype": "^13.0.1",
     "start-server-and-test": "^2.0.0",
-    "unist-util-visit": "^4.1.2"
+    "unist-util-visit": "^5.0.0"
   }
 }
