--- a/docs/package.json
+++ b/docs/package.json
@@ -10,10 +10,12 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "translation-status": "lunaria"
   },
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
+    "@lunariajs/core": "^0.0.24",
     "@types/culori": "^2.0.0",
     "astro": "^4.0.1",
     "culori": "^3.2.0",
